ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_if_else_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (28) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (29) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (32) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (33) at (1, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (34) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (35) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (36) at (0, 12) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Block(1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Const(1, 2.0)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Const(2, 3.0)};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_10) at (-1.5, 10.5) {Block(3)};
\node[font=\tiny] (note_11) at (-1.5, 11.5) {Assign(0, 2)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (4);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (1) [bend right] edge  node { } (5);
		\path[->, blue] (1) [bend right] edge  node { } (9);
		\path[->, blue] (1) [bend right] edge  node { } (20);
		\path[->, blue] (1) [bend right] edge  node { } (21);
		\path[->, blue] (1) [bend right] edge  node { } (6);
		\path[->, blue] (1) [bend right] edge  node { } (10);
		\path[->, blue] (1) [bend right] edge  node { } (24);
		\path[->, blue] (1) [bend right] edge  node { } (25);
		\path[->, blue] (1) [bend right] edge  node { } (7);
		\path[->, blue] (1) [bend right] edge  node { } (11);
		\path[->, blue] (1) [bend right] edge  node { } (28);
		\path[->, blue] (1) [bend right] edge  node { } (29);
		\path[->, blue] (1) [bend right] edge  node { } (8);
		\path[->, blue] (1) [bend right] edge  node { } (12);
		\path[->, blue] (1) [bend right] edge  node { } (32);
		\path[->, blue] (1) [bend right] edge  node { } (33);
		\path[->, blue] (1) [bend right] edge  node { } (13);
		\path[->, blue] (1) [bend right] edge  node { } (35);
		\path[->, blue] (1) [bend right] edge  node { } (14);


                \end{tikzpicture}
            \end{document}
