ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_memory_load_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (0) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (9) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (10) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (11) at (3, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (12) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (13) at (3, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (14) at (3, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (15) at (2, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (16) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (17) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (18) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (19) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (20) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (21) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (22) at (1, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (23) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (32) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (33) at (0, 11) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(0, 8.0)};
\node[font=\tiny] at (-1.5, 2.5) {Const(1, -12345.0)};
\node[font=\tiny] at (-1.5, 3.5) {Store(1, 0.0, 0)};
\node[font=\tiny] at (-1.5, 4.5) {Const(4, 8.0)};
\node[font=\tiny] at (-1.5, 5.5) {Load(5, 0.0, 4)};
\node[font=\tiny] at (-1.5, 6.5) {Const(6, 8.0)};
\node[font=\tiny] at (-1.5, 7.5) {Load(7, 0.0, 6)};
\node[font=\tiny] at (-1.5, 8.5) {Kill(7)};
\node[font=\tiny] at (-1.5, 9.5) {Kill(6)};
\node[font=\tiny] at (-1.5, 10.5) {Return([])};
		\path[->, blue] (24) [bend right] edge  node { } (0);
		\path[->, blue] (24) [bend right] edge  node { } (1);
		\path[->, blue] (24) [bend right] edge  node { } (2);
		\path[->, blue] (24) [bend right] edge  node { } (3);
		\path[->, blue] (24) [bend right] edge  node { } (4);
		\path[->, blue] (24) [bend right] edge  node { } (5);
		\path[->, blue] (24) [bend right] edge  node { } (6);
		\path[->, blue] (24) [bend right] edge  node { } (7);
		\path[->, blue] (24) [bend right] edge  node { } (8);
		\path[->, blue] (24) [bend right] edge  node { } (9);
		\path[->, blue] (24) [bend right] edge  node { } (10);
		\path[->, blue] (24) [bend right] edge  node { } (11);
		\path[->, blue] (24) [bend right] edge  node { } (12);
		\path[->, blue] (24) [bend right] edge  node { } (13);
		\path[->, blue] (24) [bend right] edge  node { } (14);
		\path[->, blue] (24) [bend right] edge  node { } (15);
		\path[->, blue] (24) [bend right] edge  node { } (16);
		\path[->, blue] (24) [bend right] edge  node { } (17);
		\path[->, blue] (24) [bend right] edge  node { } (18);
		\path[->, blue] (24) [bend right] edge  node { } (19);
		\path[->, blue] (24) [bend right] edge  node { } (20);
		\path[->, blue] (24) [bend right] edge  node { } (21);
		\path[->, blue] (24) [bend right] edge  node { } (22);
		\path[->, blue] (24) [bend right] edge  node { } (23);
		\path[->, blue] (24) [loop right] edge  node { } (24);
		\path[->, blue] (24) [bend right] edge  node { } (25);
		\path[->, blue] (24) [bend right] edge  node { } (26);
		\path[->, blue] (24) [bend right] edge  node { } (27);
		\path[->, blue] (24) [bend right] edge  node { } (28);
		\path[->, blue] (24) [bend right] edge  node { } (29);
		\path[->, blue] (24) [bend right] edge  node { } (30);
		\path[->, blue] (24) [bend right] edge  node { } (31);
		\path[->, blue] (24) [bend right] edge  node { } (32);
		\path[->, blue] (24) [bend right] edge  node { } (33);


                \end{tikzpicture}
            \end{document}
