ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_overwrite_return_values_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (1, 1) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (4, 0) { };
\node[font=\tiny] (note_2) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (1.5, 2.5) {Return([1])};
\node[font=\tiny] (note_5) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_6) at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_7) at (1.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (8);
		\path[->, blue] (1) [bend right] edge  node { } (9);
		\path[->, blue] (1) [bend right] edge  node { } (10);
		\path[->, blue] (2) [loop right] edge  node { } (2);


                \end{tikzpicture}
            \end{document}
